--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -23,4 +23,4 @@ jobs:
         
     - name: Run Tests
       run: |
-        python manage.py runserver
+        python hack2k21/manage.py runserver
